# szse-binary-rs

./: Cargo.toml  LICENSE  README.md
benches/: parse_bench.rs
src/: lib.rs
