[package]
name = "szse-binary-rs"
version = "0.1.0"
edition = "2024"
description= "Parser for SSE binary market data protocol (Ver1.17)"
license = "MIT"
repository = "https://github.com/Aida118/szse-binary-rs"
keywords = ["finance", "market-data", "szse", "trading", "parser"]
categories = ["parser-implementations", "finance"]

[dependencies]
criterion= { version = "0.5", features = ["html_reports"]}

[[bench]]
name = "parse_bench"
harness = false
